syntax = "proto3";
option go_package = "github.com/ChrisRx/kvstore/internal/kvpb";

import "google/protobuf/empty.proto";

message GetRequest {
    string key = 1;
}

message GetResponse {
    string key = 1;
    string value = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message DeleteRequest {
    string key = 1;
}

service KV {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}
